--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "date-fns": "^2.29.3",
     "next": "^13.1.6",
+    "papaparse": "^5.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.27",
     "postcss": "^8.4.21",
     "autoprefixer": "^10.4.13",
