--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "debug-dev": "NODE_OPTIONS='--inspect' next dev"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
