--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "debug-dev": "NODE_OPTIONS='--inspect' next dev"
   },
   "dependencies": {
+    "chart.js": "^4.2.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^2.29.3",
     "next": "^13.1.6",
     "papaparse": "^5.3.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.27",
-    "postcss": "^8.4.21",
     "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5"
   }
